--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -14,10 +14,10 @@ on:
           - error
         default: into
         required: false
-  schedule:
+  #schedule:
     # The "*" (#42, asterisk) character has special semantics in YAML, so this
     # string has to be quoted.
-    - cron: '0/30 * * * *'
+    #- cron: '0/30 * * * *'
 jobs:
   renovate:
     runs-on: ubuntu-latest
